fix nav color clipping

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -112,6 +112,9 @@ body{
   .navigationSlider .slidingNav ul{
     background: #202020;
   }
+  .fixedHeaderContainer ul, ol{
+    margin: 0;
+  }
 
 }
 
